# genshin-cloud-rust

./: .gitignore  Cargo.toml  Compose.yml  Dockerfile  Makefile.toml  ReadMe.md  dev.compose.yml
.github/workflows/: rust.yml
api_base/: Cargo.toml
api_base/src/: bootstrap.rs
api_system/: Cargo.toml
api_system/src/: lib.rs  main.rs
tasks/: build.dockerfile  compose.dev.yml  compose.yml  dev.dockerfile  dockerfile
