[workspace]
members = ["packages/*"]

default-members = ["packages/router"]
resolver = "2"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"

[workspace.package]
authors = ["langyo <langyo.china@gmail.com>"]
publish = false

version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = { version = "^1", features = ["backtrace"] }
derive_more = { version = "^2", features = ["full"] }
once_cell = "^1"

base64 = "^0.22"
bytes = "^1"
chrono = { version = "^0.4", features = ["serde", "unstable-locales"] }
percent-encoding = "^2"

flume = "^0.11"
futures = "^0.3"
oneshot = "^0.1"
tokio = { version = "^1", features = ["full"] }

serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
strum = { version = "^0.27", features = ["derive"] }
uuid = { version = "^1", features = [
  'v4',
  "v7",
  'fast-rng',
  'macro-diagnostics',
  'serde',
] }
yuuka = "^0.6"

image = { version = "^0.25", features = ["gif", "jpeg", "png", "webp"] }
sqids = "^0.4"
bzip2 = "^0.6"

bcrypt = "^0.17"
jsonwebtoken = "^9"

env_logger = "^0.11"
log = "^0.4"
tracing = "^0.1"
tracing-appender = "^0.2"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }

axum = { version = "^0.8", features = [
  "macros",
  "json",
  "query",
  "multipart",
  "ws",
] }
axum-extra = { version = "^0.10", features = [
  "typed-header",
  "query",
  "multipart",
  "cookie",
] }
reqwest = { version = "^0.12", features = [
  "charset",
  "http2",
  "rustls-tls",
  "cookies",
  "gzip",
  "brotli",
  "json",
  "multipart",
] }
sea-orm = { version = "^1", features = [
  "debug-print",
  "json-array",
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }
tower-http = { version = "^0.6", features = ["fs", "trace"] }
