[package]
name = "api_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }

log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

state = { workspace = true }

# rbatis序列化框架及依赖
serde = { workspace = true }
rbs = { workspace = true }
# rbatis数据库ORM框架
rbatis = { workspace = true }
# rbatis数据库驱动
# rbdc-sqlite = { version = "0.1" }
# rbdc-mysql={ version="0.1"}
rbdc-pg = { workspace = true }

api_base = { path = "../api_base" }
